<resources>
    <string name="app_name">SAfETy App</string>
    <string name="app_name_only">SAfETy</string>
    <string name="title_walkthrough">Walkthroughs</string>
    <string name="title_action_items">Action Items</string>
    <string name="title_action_item_detail">Action Item Detail</string>
    <string name="title_summary">Summary</string>
    <string name="title_locations">Locations</string>
    <string name="logo_desc">SAfETy Logo</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="walkthroughs">"Walkthroughs"</string>
    <string name="action_undo">UNDO</string>
    <string name="priority_high">HIGH PRIORITY</string>
    <string name="priority_med">MEDIUM PRIORITY</string>
    <string name="priority_low">LOW/NO PRIORITY</string>
    <string name="priority_high_desc">Immediate action required</string>
    <string name="priority_med_desc">Action required as time allows</string>
    <string name="priority_low_desc">No action needed</string>
    <string name="welcome1_title">The SAfETy App</string>
    <string name="welcome1_message">A Walkthrough Tool for Administrators</string>
    <string name="welcome2_item1">This tool will help you gather data about physical and social conditions in your school through standardized observations in non-classroom and classroom locations. You will be able to use this data to create an action plan to improve school climate.</string>
    <string name="welcome2_item2">You will be able to use this data to create an action plan to improve school climate.</string>
    <string name="welcome3_title">General Instructions and Tips</string>
    <string name="welcome3_item1">1. Once you have created a new walkthrough, you can scroll through and select from a list of locations where observations will be conducted.</string>
    <string name="welcome3_item2">2. Once you\’ve chosen a location, complete the rating and prioritize each environmental indicator or observed behavior.</string>
    <string name="welcome3_item3">3. Use the Action Plan space to note possible actions to resolve the issue observed. You may access all Action Items under the Action Items tab.</string>
    <string name="welcome3_item4">4. When Action Items are complete you may dismiss them by tapping the ( ) icon.</string>
    <string name="welcome3_item5">5. Take a picture to document the issue or share with others. Please be careful not to have students in the picture.</string>
    <string name="welcome3_item6">6. Use the Summary tab to compare the results of walkthroughs. In particular this tab allows you to see the number and priority of different action items.</string>
    <string name="welcome4_title">Prioritization Guide</string>
    <string name="prioritization_tip_text">You may set a priority level for each item in the walkthrough to help determine how soon action items need to be addressed. Only items with a red or yellow priority will be shown in your list of action items.</string>
    <string name="welcome5_title">A couple final tips&#8230;</string>
    <string name="welcome5_item1">It is best to conduct the observations when students and staff are using the space as they normally would.</string>
    <string name="welcome5_item2">Ideally the walkthrough will be completed in one day by the same person or persons. If this is not possible, try to complete the walkthrough during one week.</string>
    <string name="welcome5_footer">Next, we need some information about you and your school…</string>
    <string name="title_signup">Sign Up</string>
    <string name="hint_name">Name</string>
    <string name="error_name">Name is required</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_check">Retype Password</string>
    <string name="error_email_none">Email is required</string>
    <string name="error_email_invalid">Invalid email</string>
    <string name="hint_school_name">School Name</string>
    <string name="error_school_name">School name is required</string>
    <string name="error_no_password">Password is required</string>
    <string name="error_invalid_password">Password must contain a number, an uppercase, and a special character </string>
    <string name="error_invalid_password_length">Password must be 8 characters long </string>
    <string name="error_invalid_password_no_match">Passwords do not match </string>
    <string name="label_signup_role">Role</string>
    <string name="label_signup_school_name">School</string>
    <string name="btn_signup">Let\'s get started!</string>
    <string name="signup_role_prompt">Choose a role</string>
    <string name="error_create_walkthrough_name">Name requires 2 or more characters</string>
    <string name="new_school">Add New School</string>
    <string name="button_login">Login</string>
    <string name="button_login_status">Login Status</string>
    <string name="button_loginGo">Go To Login</string>
    <string name="text_login">Already a user?</string>
    <string name="text_signup_school_name">School</string>
    <string name="status_placeholder">Signup Status</string>
    <string name="status_text">"Unable to Sign Up %1$s \n AWS Error"</string>
    <string name="signup_confirm_title">Almost There!</string>
    <string name="signup_confirm_description">A confirmation email has been sent to %1$s. Please enter the code you receive in the field below.</string>
    <string name="signup_code">Code</string>
    <string name="signup_status">Incorrect Confirmation Code</string>
    <string name="signup_button_confirm">Confirm</string>
    <string name="signup_button_inbox">Go To Inbox</string>
    <string name="login_field_email_placeholder">Email</string>
    <string name="Login_field_password_placeholder">Password</string>
    <string name="login_image_background_description">background</string>
    <string name="login_image_logo_description">Register</string>
    <string name="login_text_register">New User?</string>
    <string name="login_button_register">Sign Up</string>
    <string name="error_password_none">Password is required</string>
    <string name="login_code_title">Account Verification</string>
    <string name="login_code_button_send_email">Resend Code</string>
    <string name="login_code_button_confirm">Confirm</string>
    <string name="login_code_status_placeholder">Code Status</string>
    <string name="login_code_button_sent">Code Sent</string>
    <string name="login_code_button_error">Issue Sending Code</string>
    <string name="placeholder_title">Title</string>
    <string name="placeholder_content">This is some dummy text to fill in the content. Place change this text to whatever you would like when initializing this view. Until then, you will have this beautiful text filling in the spaces.</string>
    <string name="placeholder_button">Button</string>
    <string-array name="signup_roles">
        <item>Administrator</item>
        <item>Teacher</item>
        <item>Student Services</item>
        <item>Other</item>
    </string-array>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="got_it">GOT IT</string>
    <string name="label_priority">Priority:</string>
    <string name="label_action_plan">Action Plan:</string>
    <string name="label_take_photo">Take a Photo:</string>
    <string name="hint_action_plan">Tap to enter action plan here</string>
    <string name="tutorial_title">Create a new walkthrough</string>
    <string name="tutorial_content">Click on the add button to start a new walkthrough.</string>
    <string name="tab_overview">Overview Tab</string>
    <string name="tab_details">Details Tab</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_walkthrough">WalkthroughActivity</string>
    <string name="action_settings">Settings</string>
    <string name="undo_string">Undo</string>
    <string name="title_edit_priority_dialog">Select a priority:</string>
    <string name="exit_confirmation_no_save">Are you sure you want to exit without saving your changes?</string>
    <string name="confirmation">Confirmation</string>
    <string name="no_walkthrough_text">You don\'t have any walkthroughs.</string>
    <string name="viewholder_header_completed">Completed</string>
    <string name="viewholder_header_inprogress">In Progress</string>
    <string name="walkthrough_in_progress_dialog_message">You have an unfinished walkthrough. Creating a new walkthrough will mark the unfinished walkthrough as complete. Are you sure you want to create a new walkthrough?</string>
    <string name="dismiss_action_item">Action item was dismissed</string>
    <string name="no_action_items">Great job! You currently have no action items!</string>
    <string name="exit_confirmation_save">Are you sure you want to exit walkthrough?</string>
    <string name="exit_confirmation_save_message">Your responses will be saved.</string>
    <string name="last_modified">Last Modified:</string>
    <string name="walkthrough_last_modified">Last Modified:</string>
    <string name="network_unavailable">Offline, get back online for sync to work</string>
    <string name="please_enter_the_information_of_the_new_user">Please enter the information of the new user:</string>
    <string name="username">Username</string>
    <string name="temporary_password">Temporary Password</string>
    <string name="school">School</string>
    <string name="create_user">Create User</string>
    <string name="Admin_add">Add User</string>
    <string name="Admin_remove">Remove User</string>
    <string name="dropdown_signout">Sign Out</string>
    <string name="login_button_error_aws_user_exists">Incorrect Password</string>
    <string name="login_button_error_aws_attempts_exceeded">Password Attempts Exceeded!\nTry again soon.</string>
    <string name="login_button_user_confirmed">Account Confirmed!\nLogging in…</string>
    <string name="login_button_error_aws_new_password">Password Reset Required</string>
    <string name="login_button_error_aws_error">Unknown AWS Issue</string>
    <string name="login_button_error_aws_code_error_incorrect">Incorrect Code</string>
    <string name="login_button_error_aws_code_error_limit">Attempt Limit Exceeded</string>
    <string name="login_button_error_aws_code_error_default">Unknown Error</string>
    <string name="login_button_error_aws_internal_error">AWS Internal Error</string>
    <string name="login_button_user_not_found">Account Not Found</string>
    <string name="login_button_error_verify">Need to Verify Account\nContinue Process?</string>
    <string name="login_button_error_AWS_connection_issue">AWS Connection Issue</string>
    <string name="authorization_code_input_field">Enter your code here</string>
    <string name="authorization_code_des">You still need to verify your account. Please enter the code that was previously emailed to you.</string>
    <string name="code_listener_button_confirm">CONFIRM</string>
    <string name="code_authorization_confirmed">CONFIRMED</string>
    <string name="sign_up_title">Create Your Account</string>
    <string name="aws_login_error_disabled">Your Account Has Been Disabled</string>
    <string name="aws_login_error_details">Unable to load your account.\nTry again…</string>
    <string name="delete_user">delete user</string>
    <string name="add_user">add user</string>
    <string name="view_current_tickets">View Current Tickets</string>
    <string name="ticket_history">Ticket History</string>
    <string name="string_ticket_history" />
    <string name="new_ticket">New Ticket</string>
    <string name="view_history">View History</string>
    <string name="string_view_history" />
    <string name="enter_your_name">Enter your name:</string>
    <string name="view_tickets">View Tickets</string>
</resources>