<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    android:id="@+id/fragment_walkthrough_location">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:onClick="viewHistory"
        android:text="@string/ticket_history" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:onClick="addUser"
        android:text="@string/add_user" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:onClick="deleteUser"
        android:text="@string/delete_user" />

</LinearLayout>