<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/welcome3_left_margins"
        android:layout_marginRight="@dimen/welcome3_right_margins"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/welcome2_textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="5sp"
            android:paddingBottom="@dimen/welcome3_bot_margins"
            android:paddingTop="@dimen/welcome3_top_margins"
            android:text="@string/welcome3_item1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/welcome3_text_size" />

        <TextView
            android:id="@+id/welcome2_textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="5sp"
            android:paddingBottom="@dimen/welcome3_bot_margins"
            android:paddingTop="@dimen/welcome3_top_margins"
            android:text="@string/welcome3_item2"
            android:textColor="@android:color/black"
            android:textSize="@dimen/welcome3_text_size" />

        <TextView
            android:id="@+id/welcome2_textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="5sp"
            android:paddingBottom="@dimen/welcome3_bot_margins"
            android:paddingTop="@dimen/welcome3_top_margins"
            android:text="@string/welcome3_item3"
            android:textColor="@android:color/black"
            android:textSize="@dimen/welcome3_text_size" />

        <TextView
            android:id="@+id/welcome2_textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="5sp"
            android:paddingBottom="@dimen/welcome3_bot_margins"
            android:paddingTop="@dimen/welcome3_top_margins"
            android:text="@string/welcome3_item4"
            android:textColor="@android:color/black"
            android:textSize="@dimen/welcome3_text_size" />

        <TextView
            android:id="@+id/welcome2_textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="5sp"
            android:paddingBottom="@dimen/welcome3_bot_margins"
            android:paddingTop="@dimen/welcome3_top_margins"
            android:text="@string/welcome3_item5"
            android:textColor="@android:color/black"
            android:textSize="@dimen/welcome3_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/welcome3_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:text="@string/welcome3_title"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

</RelativeLayout>