<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome4_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/welcome4_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/welcome_titles_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/welcome4_circle_red"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/circle_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <View
        android:id="@+id/welcome4_circle_yellow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/circle_yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome4_circle_red" />


    <View
        android:id="@+id/welcome4_circle_green"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/circle_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome4_circle_yellow"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/priority_high"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/welcome4_circle_red"
        app:layout_constraintTop_toTopOf="@+id/welcome4_circle_red" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/priority_med"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/welcome4_circle_yellow"
        app:layout_constraintTop_toTopOf="@+id/welcome4_circle_yellow" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/priority_low"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/welcome4_circle_green"
        app:layout_constraintTop_toTopOf="@+id/welcome4_circle_green" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:text="@string/priority_high_desc"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/welcome4_circle_red"
        app:layout_constraintStart_toEndOf="@+id/welcome4_circle_red" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:text="@string/priority_med_desc"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/welcome4_circle_yellow"
        app:layout_constraintStart_toEndOf="@+id/welcome4_circle_yellow" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/priority_low_desc"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/welcome4_circle_green"
        app:layout_constraintStart_toEndOf="@+id/welcome4_circle_green" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:paddingLeft="8dp"
        android:text="@string/prioritization_tip_text"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_width="0dp" />

</android.support.constraint.ConstraintLayout>