<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Admin_enter_new_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="18dp"
        android:text="@string/please_enter_the_information_of_the_new_user"
        app:autoSizeMaxTextSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/new_user_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/new_user_username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="13dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/new_user_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Admin_enter_new_info"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/new_user_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/temporary_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/new_user_school_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/new_user_username"
        app:layout_constraintTop_toBottomOf="@+id/new_user_username"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/new_user_school_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/school"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/create_user_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/new_user_password"
        app:layout_constraintTop_toBottomOf="@+id/new_user_password"
        tools:targetApi="o" />

    <Button
        android:id="@+id/create_user_btn"
        android:layout_width="374dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="219dp"
        android:text="@string/create_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="@+id/new_user_school_id"
        app:layout_constraintTop_toBottomOf="@+id/new_user_school_id" />
</android.support.constraint.ConstraintLayout>