<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/welcome3_right_margins"
        android:layout_marginStart="@dimen/welcome3_left_margins"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome5_textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="5sp"
            android:paddingBottom="@dimen/welcome3_bot_margins"
            android:paddingTop="@dimen/welcome3_top_margins"
            android:text="@string/welcome5_item1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/welcome5_text_size" />

        <TextView
            android:id="@+id/welcome5_textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="5sp"
            android:paddingBottom="@dimen/welcome3_bot_margins"
            android:paddingTop="@dimen/welcome3_top_margins"
            android:text="@string/welcome5_item2"
            android:textColor="@android:color/black"
            android:textSize="@dimen/welcome5_text_size" />

        <TextView
            android:id="@+id/welcome5_textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="5sp"
            android:paddingBottom="@dimen/welcome3_bot_margins"
            android:paddingTop="@dimen/welcome3_top_margins"
            android:text="@string/welcome5_footer"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/welcome_titles_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/welcome5_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:text="@string/welcome5_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/welcome_titles_text_size" />

</RelativeLayout>